--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -1,8 +1,34 @@
 .navbar {
     float: left;
-    position: absolute;
+    position: fixed;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 ul {
     list-style-type: none;
+    padding: 0 0 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbarLogo {
+    width: 80px;
+    image-orientation: flip;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
